--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ p {
     #ffd87c 77.22%,
     #b58f3e 100.01%
   );
-  -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
@@ -85,7 +85,9 @@ p {
     /* position: relative;
     z-index: -11; */
   }
- 
+  .costumer {
+    color: #ffffff !important;
+  }
 }
 @media screen and (min-width: 1440px) {
   .support {
